Pair adaption, edgesSorted gives BitSets